P2: Fixed container issue that was causing the squares (trapezoids) to not function properly. The container div was too big in the CSS file.

--- a/newproject/css/style.css
+++ b/newproject/css/style.css
@@ -3,9 +3,9 @@ body {
 }
 
 #container {
-  width: 1000px;
-  height: 1000px;
-  background-color: transparent;
+  /* width: 1000px; */
+  /* height: 1000px; */
+  /* background-color: transparent; */
 }
 
 
